added Hello Tongmyong in hotfix

--- a/Min.html
+++ b/Min.html
@@ -1,9 +1,11 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>HTML Page</title>
 	</head>
 	<body>
 		<h1>SIM MIN GWANG 20210128</h1>
+		<h1>Hello Tongmyong! in hotfix</h1>
+	
 	</body>
 </html>
