--- a/Min.html
+++ b/Min.html
@@ -5,6 +5,10 @@
 	</head>
 	<body>
 		<h1>SIM MIN GWANG 20210128</h1>
-		<h1>Hello Tongmyong! in hotfix</h1>	
-	</body>
+	<h1>Hello Tongmyong! in hotfix</h1>
+	<h1>Hello gildong! in hotfix(mster)"</h1>
+        </body>
+
+
 </html>
+
