modified hello.html on GitHub for pull

--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,8 @@
 		<h1>Hello world! in master</h1>
 		<h1>Hello Tongmyong! in ex5</h1>
 	        <h1>Hello Security! in master</h1>
-		<h1>Hello Github! in Github</h1?
+		<h1>Hello Git! in Git</h1>
+		<h1>Hello Github! in Github</h1>
+		<h1>Hello Open source! in GitHub</h1>
 	</body>
 </html>
